<resources>
    <string name="app_name">GT Events</string>
    <string name="action_settings">Settings</string>

    <!-- Login Screen Values. -->
    <!-- Login Title. -->
    <string name="login_title">GT Login</string>

    <!-- Username label. -->
    <string name="username_label">Username :</string>

    <!-- Password label. -->
    <string name="password_label">Password :</string>

    <!-- Login button label. -->
    <string name="login_label">Login</string>

    <!-- Error Message. -->
    <string name="error_message">Invalid Credentials</string>
    <!-- End of Login Screen Values. -->


    <!-- Event Creation Screen Values. -->
    <!-- Event Creation Title. -->
    <string name="event_creation_title">Create Event</string>

    <!-- Event Name Label. -->
    <string name="event_name_label">Event Name :</string>

    <!-- Organization Label. -->
    <string name="organization_label">Organization :</string>

    <!-- Time Label. -->
    <string name="time_label">Time :</string>

    <!-- Location Label. -->
    <string name="location_label">Location :</string>

    <!-- Description Label. -->
    <string name="description_label">Description :</string>

    <!-- Create Event Button. -->
    <string name="create_event_label">Create Event!</string>

    <!-- Locations Array. -->
    <string-array name="locations_array">
        <item>CRC</item>
        <item>Student Center</item>
        <item>COC</item>
        <item>CULC</item>
        <item>Bobby Dodd</item>
    </string-array>

    <!-- Event creation failed. -->
    <string name="event_create_fail">Could not create event</string>
    <!-- End of Event Creation Screen Values. -->


    <!-- Feed Screen Values. -->
    <!-- Tab 1 name. -->
    <string name="feed_tab1_name">Feed</string>

    <!-- Tab 2 name. -->
    <string name="feed_tab2_name">My Events</string>

    <!-- Tab 3 name. -->
    <string name="feed_tab3_name">Saved Events</string>

    <string name="title_activity_splash_screen">SplashScreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <!-- End of Feed Screen Values. -->
</resources>
