<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/inputLinearLayout"
        android:layout_marginLeft="@dimen/event_creation_screen_padding"
        android:layout_marginRight="@dimen/event_creation_screen_padding">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/eventNameLayout"
            android:layout_margin="@dimen/event_creation_screen_edit_text_padding">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/event_name_label"
                android:id="@+id/eventNameLabel" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/eventNameEditText"
                android:minWidth="@dimen/edit_text_length" />

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/organizationLayout"
            android:layout_margin="@dimen/event_creation_screen_edit_text_padding">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/organization_label"
                android:id="@+id/organizationLabel" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/organizationEditText"
                android:minWidth="@dimen/edit_text_length" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/timeLayout"
            android:layout_margin="@dimen/event_creation_screen_edit_text_padding">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/time_label"
                android:id="@+id/timeLabel" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="time"
                android:ems="10"
                android:id="@+id/timeEditText" />

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/locationLayout"
            android:layout_margin="@dimen/event_creation_screen_edit_text_padding">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/location_label"
                android:id="@+id/locationLabel" />

            <Spinner
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/locationSpinner" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/description_label"
            android:id="@+id/descriptionLabel"
            android:layout_margin="@dimen/event_creation_screen_edit_text_padding" />

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/descriptionEditText"
            android:minWidth="@dimen/edit_text_length"
            android:layout_margin="@dimen/event_creation_screen_edit_text_padding" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/socialMediaLayout"
        android:gravity="center_horizontal">

        <ImageButton
            android:layout_width="@dimen/social_icon_width"
            android:layout_height="@dimen/social_icon_width"
            android:id="@+id/facebookImageButton"
            android:src="@drawable/facebook_icon"
            android:scaleType="fitXY" />

        <ImageButton
            android:layout_width="@dimen/social_icon_width"
            android:layout_height="@dimen/social_icon_width"
            android:id="@+id/twitterImageButton"
            android:src="@drawable/twitter_icon"
            android:scaleType="fitXY" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:id="@+id/createButtonLayout">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create_event_label"
            android:id="@+id/createEventButton" />
    </LinearLayout>

</LinearLayout>
